[tool.poetry]
name = "invoicer"
version = "0.1.0"
description = "A simple streamlit app to test pylnbits library"
authors = ["waltermaffy <walterm21@proton.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.22.0"
qrcode = "^7.4.2"
pylnbits = "^0.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
